Test framework: unit/HIL/conformance levels across all chips and languages
Implements the three-level test framework from issue #73 (unit / HIL / conformance) across all six languages (Python, C++, Node.js, Rust, JVM, Go) and rolls it out to every chip driver in the repo, including full mock-based unit test coverage and per-chip conformance checkers.

See PR #141 for the full summary, real bugs found and fixed along the way, and test plan.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

https://claude.ai/code/session_01X1kKTyHMKy723DJVuCTDUL